// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrugChartWrapper matches snapshot 1`] = `
<div>
  <div
    class="drugchart-parent-container"
  >
    <div
      class="drugchart-shift-header"
    >
      <button
        class="margin-right-10 bx--btn bx--btn--tertiary bx--btn--expressive"
        tabindex="0"
        type="button"
      >
        Current Shift
      </button>
      <button
        class="margin-right-6 bx--btn bx--btn--tertiary bx--btn--expressive bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
        tabindex="0"
        type="button"
      >
        <div
          class="bx--assistive-text"
        />
        <svg
          aria-hidden="true"
          class="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 8L10 3 10.7 3.7 6.4 8 10.7 12.3 10 13z"
          />
        </svg>
      </button>
      <button
        class="margin-right-10 bx--btn bx--btn--tertiary bx--btn--expressive bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
        tabindex="0"
        type="button"
      >
        <div
          class="bx--assistive-text"
        />
        <svg
          aria-hidden="true"
          class="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
          />
        </svg>
      </button>
      <span>
        20/06/2016 - 20/06/2016
      </span>
    </div>
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`DrugChartWrapper should render loading state when isLoading is true 1`] = `
<div>
  <div
    class="drugchart-parent-container"
  >
    <div
      class="drugchart-shift-header"
    >
      <button
        class="margin-right-10 bx--btn bx--btn--tertiary bx--btn--expressive"
        tabindex="0"
        type="button"
      >
        Current Shift
      </button>
      <button
        class="margin-right-6 bx--btn bx--btn--tertiary bx--btn--expressive bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
        tabindex="0"
        type="button"
      >
        <div
          class="bx--assistive-text"
        />
        <svg
          aria-hidden="true"
          class="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 8L10 3 10.7 3.7 6.4 8 10.7 12.3 10 13z"
          />
        </svg>
      </button>
      <button
        class="margin-right-10 bx--btn bx--btn--tertiary bx--btn--expressive bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
        tabindex="0"
        type="button"
      >
        <div
          class="bx--assistive-text"
        />
        <svg
          aria-hidden="true"
          class="bx--btn__icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
          />
        </svg>
      </button>
      <span>
        05/01/2024 - 05/01/2024
      </span>
    </div>
    <div>
      Loading...
    </div>
  </div>
</div>
`;
